Update url to Airavata home page

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -27,7 +27,7 @@ notifications:
 
 github:
   description: "Apache Airavata Cerebrum"
-  homepage: https://airavata.apache.org/custos
+  homepage: https://airavata.apache.org
   labels:
     - airavata
     - apache
