--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,17 +35,22 @@ license =  {text = "Apache-2.0"}
 requires-python = ">=3.8"
 keywords = [ "Data-driven", "Computational Neuroscience", "Neuroscience Modeling"]
 dependencies = [
-   "pandas>=1.5",
+   "allensdk>=2.16",
+   "anndata>=0.10",
    "airavata-python-sdk>=1.1.6",
+   "bmtk>=1.1",
    "intervaltree>=3.1.0",
+   "ipywidgets>=8.1",
+   "jsonpath-python>=1.0", 
+   "matplotlib>=3.7",
+   "numpy>=1.23",
+   "openpyxl>=3.1",
+   "pandas>=1.5",
+   "pydantic>=2.7",
    "requests>=2.31",
    "scanpy>=1.9",
-   "numpy>=1.23",
-   "ipywidgets>=8.1",
-   "matplotlib>=3.7",
    "scipy>=1.9",
-   "bmtk>=1.1",
-   "pydantic>=2.7"
+   "tqdm>=4.66",
 ]
 
 [tool.setuptools.packages.find]
