--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,42 +16,44 @@
 # specific language governing permissions and limitations
 # under the License.
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[project]
+[tool.poetry]
 name = "airavata-cerebrum"
 version = "0.1"
 description = "Apache Airavata Cerebrum : Integrated Data-driver Modeling for Computational Neuroscience"
 authors = [
-    {name = "Sriram P Chockalingam", email =  "srirampc@gatech.edu"},
+    "Sriram P Chockalingam <srirampc@gatech.edu>"
 ]
 maintainers = [
-    {name = "Apache Airavata Developers", email =  "dev@apache.airavata.org"},
+    "Apache Airavata Developers <dev@apache.airavata.org>"
 ]
 readme = "README.md"
-urls = {Homepage = "https://github.com/apache/airavata-cerebrum"}
-license =  {text = "Apache-2.0"} 
-requires-python = ">=3.8"
+homepage = "https://github.com/apache/airavata-cerebrum"
+license =  "Apache-2.0" 
 keywords = [ "Data-driven", "Computational Neuroscience", "Neuroscience Modeling"]
-dependencies = [
-   "allensdk>=2.16",
-   "anndata>=0.10",
-   "airavata-python-sdk>=1.1.6",
-   "bmtk>=1.1",
-   "intervaltree>=3.1.0",
-   "ipywidgets>=8.1",
-   "jsonpath-python>=1.0", 
-   "matplotlib>=3.7",
-   "numpy>=1.23",
-   "openpyxl>=3.1",
-   "pandas>=1.5",
-   "pydantic>=2.7",
-   "requests>=2.31",
-   "scanpy>=1.9",
-   "scipy>=1.9",
-   "tqdm>=4.66",
-]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+abc_atlas_access =  { git = "https://github.com/alleninstitute/abc_atlas_access" }
+allensdk = "^2.16"
+anndata = "^0.10"
+airavata-python-sdk = "^1.1.6"
+bmtk = "^1.1"
+intervaltree = "^3.1.0"
+ipywidgets = "^8.1"
+jsonpath-python = "^1.0"
+matplotlib = "^3.7"
+numpy = "^1.23"
+openpyxl = "^3.1"
+pandas = "^2.0"
+pydantic = "^2.7"
+requests = "^2.31"
+scanpy = "^1.9"
+scipy = "^1.9"
+tqdm = "^4.66"
+
 
 [tool.setuptools.packages.find]
 include = ["airavata_cerebrum"]
