--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ openpyxl = "^3.1"
 pandas = "^1.5"
 pydantic = "^2.7"
 requests = "^2.31"
+scikit-learn = "^1.5"
 scanpy = "^1.9"
 scipy = "^1.9"
 tqdm = "^4.66"
