--- a/environment.yml
+++ b/environment.yml
@@ -56,6 +56,7 @@ dependencies:
     - bmtk
     - pylightxl
     - scanpy
+    - pytree
     - git+https://github.com/alleninstitute/abc_atlas_access
     - git+https://github.com/alleninstitute/neuroanalysis
     - git+https://github.com/alleninstitute/aisynphys
