--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,20 +45,23 @@ airavata-python-sdk = "^1.1.6"
 bmtk = "^1.1"
 intervaltree = "^3.1.0"
 ipywidgets = "^8.1"
+ipytree = "^0.2"
 jsonpath-python = "^1.2.0"
 matplotlib = "^3.7"
 numpy = "^1.23"
 openpyxl = "^3.1"
+parse = "^1.20"
 pandas = "^1.5"
 pydantic = "^2.7"
+pyyaml = "^6.0"
 requests = "^2.31"
 scikit-learn = "^1.5"
 scanpy = "^1.9"
 scipy = "^1.9"
+statsmodels = "^0.14"
+traitlets = "^5.1"
 tqdm = "^4.66"
 pillow = "^10.4"
-pyyaml = "^6.0"
-statsmodels = "^0.14"
 
 [tool.setuptools.packages.find]
 include = ["airavata_cerebrum"]
