--- a/resources/notebooks/v1l4/config_nest.json
+++ b/resources/notebooks/v1l4/config_nest.json
@@ -13,7 +13,7 @@
     "block_size": 1000.0
   },
   "inputs": {
-    "BKG_spikes": {
+    "bkg_spikes": {
       "input_type": "spikes",
       "module": "h5",
       "input_file": "$BKGINPUT_DIR/bkg_spikes_250Hz_3s.h5",
