--- a/environment.yml
+++ b/environment.yml
@@ -2,65 +2,37 @@ channels:
   - conda-forge
 
 dependencies:
-  # Basics ------------------
+  # Basics -----------------
   - python=3.10
   - pip
 
-  # Convenience -------------
-  - black
-  
-  # Testing
-  - pytest
-  - iminuit
-  
-  # modeling
-  - openpyxl
-  - numba
-
-  # allensdk
-  - future
-  - ipywidgets
-  - ipytree
-  - jinja2
+  # Key dependencies -------
+  - ipywidgets=8.1
+  - ipytree=0.2
   - python-jsonpath
   - jupyter
-  - numpy
-  - matplotlib
-  # - nest-asyncio
-  - pandas
-  - pillow
-  - psycopg2-binary
-  - pydantic
-  - pynrrd
-  - python-dateutil
-  - pyyaml
-  - requests
-  - scikit-build
-  - scikit-image
-  - scikit-learn
-  - scipy
-  - seaborn
-  - semver
-  - statsmodels
-  - simpleitk
-  - simplejson
-  - six
+  - nest=3.8
+  - numba=0.60
+  - numpy=1.23
+  - matplotlib=3.7
+  - openpyxl=3.1
+  - pandas=1.5
+  - pydantic=2.7
+  - pyqtgraph
+  - pyyaml=6.0
+  - requests=2.31
+  - scipy=1.9
   - sqlalchemy
-  - traitlets
-  - tqdm
-  - xarray
+  - traitlets=5.1
+  - tqdm=4.66
 
-
-  # PIP dependencies
   - pip:
-    - anndata
-    - allensdk
-    - bmtk
-    - mpi4py
-    - parse
-    - pylightxl
-    - pytree
-    - scanpy
-    - git+https://github.com/alleninstitute/abc_atlas_access
-    - git+https://github.com/alleninstitute/neuroanalysis
-    - git+https://github.com/alleninstitute/aisynphys
+      - anndata
+      - allensdk
+      - bmtk
+      - mpi4py
+      - parse
+      - pytree
+      - git+https://github.com/alleninstitute/abc_atlas_access
+      - git+https://github.com/alleninstitute/neuroanalysis
+      - git+https://github.com/alleninstitute/aisynphys
