--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,13 +47,17 @@ flake8 = "^7.1"
 intervaltree = "^3.1.0"
 ipywidgets = "^8.1"
 ipytree = "^0.2"
-python-jsonpath = "^1.2.0"
+jupyterlab = "^3.5"
 matplotlib = "^3.7"
+nest = "^3.7"
 numpy = "^1.23"
 openpyxl = "^3.1"
 parse = "^1.20"
 pandas = "^1.5"
+pillow = "^10.4"
 pydantic = "^2.7"
+pyqtgraph = "^0.13"
+python-jsonpath = "^1.2.0"
 pyyaml = "^6.0"
 requests = "^2.31"
 scikit-learn = "^1.5"
@@ -62,7 +66,6 @@ scipy = "^1.9"
 statsmodels = "^0.14"
 traitlets = "^5.1"
 tqdm = "^4.66"
-pillow = "^10.4"
 
 [tool.setuptools.packages.find]
 include = ["airavata_cerebrum"]
