--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ ipywidgets = "^8.1"
 ipytree = "^0.2"
 jupyterlab = "^3.5"
 matplotlib = "^3.7"
-nest = "^3.7"
+nest-simulator = "^3.7"
 numpy = "^1.23"
 openpyxl = "^3.1"
 parse = "^1.20"
