--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
-airavata-python-sdk==1.1.6
+allensdk
+anndata
+bmtk
 ipywidgets
+jupyter
+mpi4py
+nest-simulator
+numba
 numpy
+openpyxl
 matplotlib
 pandas
+pydantic
+pyqtgraph
+python-jsonpath
+pyyaml
+requests
 scanpy
-anndata
+scipy
+sqlalchemy
+traitlets
+tqdm
+parse
+pytree
+git+https://github.com/alleninstitute/abc_atlas_access
+git+https://github.com/alleninstitute/neuroanalysis
+git+https://github.com/alleninstitute/aisynphys
