--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ parse = "^1.20"
 pandas = "^1.5"
 pillow = "^10.4"
 pydantic = "^2.7"
+pyqt5 = "^5.15"
 pyqtgraph = "^0.13"
 python-jsonpath = "^1.2.0"
 pyyaml = "^6.0"
